fix
1. corrected output response in groupSub
2. fix get responses for Popular and Category routers (now not auth user can get this ways)
3. fix docker images
