# backend/routes/RouterUsers.go
@@ -11,8 +11,8 @@ func RouterUsersInfo(r *gin.Engine) {
 	GetSessionGroup := r.Group("api/users")
 	{
 		GetSessionGroup.GET("/sessions/new", middlewares.JWTAuthMiddleware(), handlers.GetNewSessions)
-		GetSessionGroup.GET("/sessions/popular", middlewares.JWTAuthMiddleware(), handlers.GetPopularSessions)
-		GetSessionGroup.GET("/sessions/category", middlewares.JWTAuthMiddleware(), handlers.GetCategorySessions)
+		GetSessionGroup.GET("/sessions/popular", handlers.GetPopularSessions)
+		GetSessionGroup.GET("/sessions/category", handlers.GetCategorySessions)
 		GetSessionGroup.GET("/sessions/:sessionId", middlewares.JWTAuthMiddleware(), handlers.GetDetailedInfo)
 		GetSessionGroup.GET("/sessions/search", middlewares.JWTAuthMiddleware(), handlers.SearchSessions)
 		GetSessionGroup.GET("/sessions/user-groups", middlewares.JWTAuthMiddleware(), handlers.GetSessionsUserGroups)
